[package]
name = "hmap-serde"
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["LightQuantum <self@lightquantum.me>"]
description = "Serialize/deserialize heterogeneous maps."
license = "MIT"
keywords = ["frunk", "hlist", "heterogeneous", "map", "serialization"]
repository = "https://github.com/PhotonQuantum/hmap-serde"
readme = "README.md"
exclude = [".github/*", ".mergify.yml", "rust-toolchain.toml"]

[dependencies]
frunk_core = "0.4"
serde = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
